from copy  mport deepcopy
 mport random
 mport types

from tw ter.deepb rd.ut l.thr ft.s mple_converters  mport (
  bytes_to_thr ft_object, thr ft_object_to_bytes)

from tensorflow.compat.v1  mport logg ng
from com.tw ter.ml.ap .ttypes  mport DataRecord  # pyl nt: d sable= mport-error
 mport tensorflow.compat.v1 as tf
 mport twml


class Permuted nputFnFactory(object):

  def __ n __(self, data_d r, record_count, f le_l st=None, datarecord_f lter_fn=None):
    """
    Args:
      data_d r (str): T  locat on of t  records on hdfs
      record_count ( nt): T  number of records to process
      f le_l st (l st<str>, default=None): T  l st of data f les on HDFS.  f prov ded, use t   nstead
        of data_d r
      datarecord_f lter_fn (funct on): a funct on takes a s ngle data sample  n com.tw ter.ml.ap .ttypes.DataRecord format
        and return a boolean value, to  nd cate  f t  data record should be kept  n feature  mportance module or not.
    """
     f not (data_d r  s None) ^ (f le_l st  s None):
      ra se ValueError("Exactly one of data_d r and f le_l st can be prov ded. Got {} for data_d r and {} for f le_l st".format(
        data_d r, f le_l st))

    f le_l st = f le_l st  f f le_l st  s not None else twml.ut l.l st_f les(twml.ut l.preprocess_path(data_d r))
    _next_batch = twml. nput_fns.default_ nput_fn(f le_l st, 1, lambda x: x,
      num_threads=2, shuffle=True, shuffle_f les=True)
    self.records = []
    # Val date datarecord_f lter_fn
     f datarecord_f lter_fn  s not None and not  s nstance(datarecord_f lter_fn, types.Funct onType):
      ra se TypeError("datarecord_f lter_fn  s not funct on type")
    w h tf.Sess on() as sess:
      for    n range(record_count):
        try:
          record = bytes_to_thr ft_object(sess.run(_next_batch)[0], DataRecord)
           f datarecord_f lter_fn  s None or datarecord_f lter_fn(record):
            self.records.append(record)
        except tf.errors.OutOfRangeError:
          logg ng. nfo("Stopp ng after read ng {} records out of {}".format( , record_count))
          break
       f datarecord_f lter_fn:
        logg ng. nfo("datarecord_f lter_fn has been appl ed; keep ng {} records out of {}".format(len(self.records), record_count))

  def _get_record_generator(self):
    return (thr ft_object_to_bytes(r) for r  n self.records)

  def get_permuted_ nput_fn(self, batch_s ze, parse_fn, fna _ftypes):
    """Get an  nput funct on that passes  n a preset number of records that have been feature permuted
    Args:
      parse_fn (funct on): T  funct on to parse  nputs
      fna _ftypes: (l st<(str, str)>): T  na s and types of t  features to permute
    """
    def permuted_parse_pyfn(bytes_array):
      out = []
      for b  n bytes_array:
        rec = bytes_to_thr ft_object(b, DataRecord)
         f fna _ftypes:
          rec = _permutate_features(rec, fna _ftypes=fna _ftypes, records=self.records)
        out.append(thr ft_object_to_bytes(rec))
      return [out]

    def permuted_parse_fn(bytes_tensor):
      parsed_bytes_tensor = parse_fn(tf.py_func(permuted_parse_pyfn, [bytes_tensor], tf.str ng))
      return parsed_bytes_tensor

    def  nput_fn(batch_s ze=batch_s ze, parse_fn=parse_fn, factory=self):
      return (tf.data.Dataset
          .from_generator(self._get_record_generator, tf.str ng)
          .batch(batch_s ze)
          .map(permuted_parse_fn, 4)
          .make_one_shot_ erator()
          .get_next())
    return  nput_fn


def _permutate_features(rec, fna _ftypes, records):
  """Replace a feature value w h a value from random selected record
  Args:
    rec: (datarecord): A datarecord returned from DataRecordGenerator
    fna _ftypes: (l st<(str, str)>): T  na s and types of t  features to permute
    records: (l st<datarecord>): T  records to sample from
  Returns:
    T  record w h t  feature permuted
  """
  rec_new = deepcopy(rec)
  rec_replace = random.cho ce(records)

  #  f t  replace nt datarecord does not have t  feature type ent rely, add    n
  #   to make t  log c a b  s mpler
  for fna , feature_type  n fna _ftypes:
    f d = twml.feature_ d(fna )[0]
     f rec_replace.__d ct__.get(feature_type, None)  s None:
      rec_replace.__d ct__[feature_type] = (
        d ct()  f feature_type != 'b naryFeatures' else set())
     f rec_new.__d ct__.get(feature_type, None)  s None:
      rec_new.__d ct__[feature_type] = (
        d ct()  f feature_type != 'b naryFeatures' else set())

     f feature_type != 'b naryFeatures':
       f f d not  n rec_replace.__d ct__[feature_type] and f d  n rec_new.__d ct__.get(feature_type, d ct()):
        #  f t  replace nt datarecord does not conta n t  feature but t  or g nal does
        del rec_new.__d ct__[feature_type][f d]
      el f f d  n rec_replace.__d ct__[feature_type]:
        #  f t  replace nt datarecord does conta n t  feature
         f rec_new.__d ct__[feature_type]  s None:
          rec_new.__d ct__[feature_type] = d ct()
        rec_new.__d ct__[feature_type][f d] = rec_replace.__d ct__[feature_type][f d]
      else:
        #  f ne  r datarecord conta ns t  feature
        pass
    else:
       f f d not  n rec_replace.__d ct__[feature_type] and f d  n rec_new.__d ct__.get(feature_type, set()):
        #  f t  replace nt datarecord does not conta n t  feature but t  or g nal does
        rec_new.__d ct__[feature_type].remove(f d)
      el f f d  n rec_replace.__d ct__[feature_type]:
        #  f t  replace nt datarecord does conta n t  feature
         f rec_new.__d ct__[feature_type]  s None:
          rec_new.__d ct__[feature_type] = set()
        rec_new.__d ct__[feature_type].add(f d)
        #  f ne  r datarecord conta ns t  feature
      else:
        #  f ne  r datarecord conta ns t  feature
        pass
  return rec_new
